// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentCard should match snapshot with Person favorite status true 1`] = `
<article
  className="content_card"
>
  <h1
    key="name0"
  >
    Luke Skywalker
  </h1>
  <p
    key="species1"
  >
    species
    : 
    Human
  </p>
  <p
    key="homeworld2"
  >
    homeworld
    : 
    Tatooine
  </p>
  <p
    key="population3"
  >
    population
    : 
    200000
  </p>
  <button
    className="button"
    onClick={[Function]}
  />
</article>
`;

exports[`ContentCard should match snapshot with Person favorite status true 2`] = `
<article
  className="content_card favorite"
>
  <p
    key="climate0"
  >
    climate
    : 
    temperate
  </p>
  <h1
    key="name2"
  >
    Alderaan
  </h1>
  <p
    key="populaton3"
  >
    populaton
    : 
    2000000000
  </p>
  <p
    key="residents4"
  >
    residents
    : 
    Leia Organa
    Bail Prestor Organa
    Raymus Antilles
  </p>
  <p
    key="terrain5"
  >
    terrain
    : 
    grasslands, mountains
  </p>
  <button
    className="button"
    onClick={[Function]}
  />
</article>
`;

exports[`ContentCard should match snapshot with Person favorite status true 3`] = `
<article
  className="content_card favorite"
>
  <h1
    key="name0"
  >
    Sand Crawler
  </h1>
  <p
    key="model1"
  >
    model
    : 
    Digger Crawler
  </p>
  <p
    key="class2"
  >
    class
    : 
    wheeled
  </p>
  <p
    key="number of passengers3"
  >
    number of passengers
    : 
    30
  </p>
  <button
    className="button"
    onClick={[Function]}
  />
</article>
`;

exports[`ContentCard should match snapshot with people data object passed 1`] = `
<article
  className="content_card"
>
  <h1
    key="name0"
  >
    Luke Skywalker
  </h1>
  <p
    key="species1"
  >
    species
    : 
    Human
  </p>
  <p
    key="homeworld2"
  >
    homeworld
    : 
    Tatooine
  </p>
  <p
    key="population3"
  >
    population
    : 
    200000
  </p>
  <button
    className="button"
    onClick={[Function]}
  />
</article>
`;

exports[`ContentCard should match snapshot with planet data object passed 1`] = `
<article
  className="content_card"
>
  <p
    key="climate0"
  >
    climate
    : 
    temperate
  </p>
  <h1
    key="name2"
  >
    Alderaan
  </h1>
  <p
    key="populaton3"
  >
    populaton
    : 
    2000000000
  </p>
  <p
    key="residents4"
  >
    residents
    : 
    Leia Organa
    Bail Prestor Organa
    Raymus Antilles
  </p>
  <p
    key="terrain5"
  >
    terrain
    : 
    grasslands, mountains
  </p>
  <button
    className="button"
    onClick={[Function]}
  />
</article>
`;

exports[`ContentCard should match snapshot with vehicle data object passed 1`] = `
<article
  className="content_card"
>
  <h1
    key="name0"
  >
    Sand Crawler
  </h1>
  <p
    key="model1"
  >
    model
    : 
    Digger Crawler
  </p>
  <p
    key="class2"
  >
    class
    : 
    wheeled
  </p>
  <p
    key="number of passengers3"
  >
    number of passengers
    : 
    30
  </p>
  <button
    className="button"
    onClick={[Function]}
  />
</article>
`;
